error message for facilities added

--- a/style2.css
+++ b/style2.css
@@ -6,10 +6,10 @@ table, th, td {
     border:2px solid rgb(58, 24, 24);
     margin: auto;
     margin-top: 100px;
-    
+    font-size: 20px;
     /* background-color: rgb(173, 95, 95); */
     background: linear-gradient(
-        45deg, #817575, transparent);
+        45deg, #df8585, transparent);
     /* background-color: transparent; */
     
   }
@@ -17,14 +17,14 @@ table, th, td {
     /* display: inline-table; */
     border: 2px solid black;
     margin: auto;
-    height: 600px;
+    height: 700px;
     width: 800px;
     /* margin-left: 350px;
     margin-top: 90px; */
     /* background-color: burlywood; */
     background-image: url(image.jpg);
     
-    background-size: 800px 600px;
+    background-size: 800px 700px;
     align-items: center;
    
 }
